# bayou

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GAMEPLAY_IMPLEMENTATION.md  GRAPHICS_SYSTEM.md  build_debug.bat  debug_pieces.cpp  generate.bat  package-lock.json  run_client.bat  run_server.bat  run_tests.bat  test_gameplay.cpp  test_initialization.cpp  test_multiplayer.bat  test_piece_creation.cpp
.cursor/rules/: cpp_organization.mdc
assets/data/: cards.json  pieces.json
client/: CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp
docs/: Architecture_Guidelines.md  DATABASE_SETUP.md  InputManager_Refactoring.md
include/: Animation.h  Bishop.h  Card.h  CardCollection.h  CardFactory.h  CardPlayValidator.h  CombatCalculator.h  CombatIntegrator.h  CombatSystem.h  DeckEditor.h  EffectCard.h  Game.h  GameBoard.h  GameInitializer.h  GameOverDetector.h  GameRules.h  GameState.h  GraphicsManager.h  HandRenderer.h  HealthTracker.h  InfluenceSystem.h  InputManager.h  King.h  Knight.h  Menu.h  Move.h  MoveExecutor.h  NetworkManager.h  NetworkProtocol.h  Pawn.h  Piece.h  PieceCard.h  PieceData.h  PieceDefinitionManager.h  PieceFactory.h  PieceRemovalHandler.h  PlayerSide.h  Queen.h  ResourceSystem.h  Rook.h  (+3 more)
scripts/: prd.txt  task-complexity-report.json
server/: CMakeLists.txt  Server.cpp  Server.h  ServerMain.cpp
src/: Animation.cpp  Bishop.cpp  Card.cpp  CardCollection.cpp  CardFactory.cpp  CardPlayValidator.cpp  CombatCalculator.cpp  CombatCalculator.h  CombatIntegrator.cpp  CombatIntegrator.h  CombatSystem.cpp  CombatSystem.h  DeckEditor.cpp  EffectCard.cpp  Game.cpp  GameBoard.cpp  GameInitializer.cpp  GameOverDetector.cpp  GameRules.cpp  GameState.cpp  GraphicsManager.cpp  HandRenderer.cpp  HealthTracker.cpp  InfluenceSystem.cpp  InputManager.cpp  King.cpp  Knight.cpp  Menu.cpp  Move.cpp  MoveExecutor.cpp  NetworkManager.cpp  Pawn.cpp  Piece.cpp  PieceCard.cpp  PieceDefinitionManager.cpp  PieceFactory.cpp  PieceRemovalHandler.cpp  PieceRemovalHandler.h  Queen.cpp  ResourceSystem.cpp  (+7 more)
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json  tasks.json.bak
tests/: BishopTests.cpp  CMakeLists.txt  CardPerformanceTests.cpp  CardTests.cpp  CombatSystemTests.cpp  DatabaseTests.cpp  GameRulesTests.cpp  InfluenceSystemTests.cpp  InputManagerTests.cpp  KingTests.cpp  KnightTests.cpp  NetworkIntegrationTestClient.cpp  PawnTests.cpp  PieceFactoryTests.cpp  PieceTests.cpp  QueenTests.cpp  ResourceSystemTests.cpp  RookTests.cpp  StunTests.cpp  SweetykinsTests.cpp  TurnManagerTests.cpp
